--- a/jadwal.html
+++ b/jadwal.html
@@ -28,54 +28,54 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td align="center">Senin</td>
+            <tr align="center">
+                <td>Senin</td>
                 <td></td>
                 <td></td>
-                <td align="center" colspan="2">IMK<br>K.205<br>Kelas D</td>
-                <td align="center" colspan="2">Pem Platform<br>LJK.A<br>Kelas E</td>
+                <td colspan="2">IMK<br>K.205<br>Kelas D</td>
+                <td colspan="2">Pem Platform<br>LJK.A<br>Kelas E</td>
                 <td></td>
                 <td></td>
-                <td align="center" colspan="2">KompParDis<br>LJK.E<br>Kelas E</td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td align="center">Selasa</td>
-                <td></td>
-                <td></td>
-                <td align="center" colspan="2">Pemb. Mesin<br>LBD.C<br>Kelas D</td>
-                <td align="center" colspan="2">RPL<br>LKD.A FST<br>Kelas E</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td colspan="2">KompParDis<br>LJK.E<br>Kelas E</td>
                 <td></td>
                 <td></td>
             </tr>
-            <tr>
-                <td align="center">Rabu</td>
+            <tr align="center">
+                <td>Selasa</td>
                 <td></td>
-                <td align="center" colspan="3">ASA<br>K.205<br>Kelas E</td>
-                <td align="center" colspan="2">Etika Profesi<br>K.205<br>Kelas B</td>
                 <td></td>
-                <td align="center" colspan="3">RPL<br>LJK.A<br>Kelas EP</td>
+                <td colspan="2">Pemb. Mesin<br>LBD.C<br>Kelas D</td>
+                <td colspan="2">RPL<br>LKD.A FST<br>Kelas E</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
-            <tr>
-                <td align="center">Kamis</td>
+            <tr align="center">
+                <td>Rabu</td>
+                <td></td>
+                <td colspan="3">ASA<br>K.205<br>Kelas E</td>
+                <td colspan="2">Etika Profesi<br>K.205<br>Kelas B</td>
+                <td></td>
+                <td colspan="3">RPL<br>LJK.A<br>Kelas EP</td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td align="center" colspan="3">Pemb. Mesin<br>LBD.C<br>Kelas D</td>
-                <td></td>
-                <td></td>
-                <td align="center" colspan="3">Pemb. Mesin<br>LBD.C<br>Kelas DP</td>
             </tr>
-            <tr>
-                <td align="center">Jumat</td>
+            <tr align="center">
+                <td>Kamis</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td colspan="3">Pemb. Mesin<br>LBD.C<br>Kelas D</td>
+                <td></td>
+                <td></td>
+                <td colspan="3">Pemb. Mesin<br>LBD.C<br>Kelas DP</td>
+            </tr>
+            <tr align="center">
+                <td>Jumat</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -84,7 +84,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td align="center" colspan="2">Manaj Infor<br>K.311<br>Kelas B</td>
+                <td colspan="2">Manaj Infor<br>K.311<br>Kelas B</td>
                 <td></td>
                 <td></td>
             </tr>
