--- a/jadwal.html
+++ b/jadwal.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h2>COOLYEAH</h2>
+    <h1 align="center">COOLYEAH</h1>
 
     <table width="100%" border="1">
         <thead>
