--- a/jadwal.html
+++ b/jadwal.html
@@ -4,12 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadwal Kuliah</title>
+    <link rel="icon" href="usd.png">
+
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-image: url('wp.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            text-align: center;
+            background-color: #978ac0;
+            color: #fff;
+            padding: 20px;
+            margin: 0;
+        }
+
+        table {
+            width: 70%;
+            margin: 20px auto;
+            border-collapse: collapse;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+        }
+
+        th, td {
+            padding: 15px;
+            text-align: center;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #978ac0;
+            color: #fff;
+        }
+
+        tbody tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tbody tr:hover {
+            background-color: #e0e0e0;
+        }
+    </style>
 </head>
 <body>
 
-    <h1 align="center">COOLYEAH</h1>
+    <h1>⌁ ☃️ COOLYEAH ☃️ ⌁</h1>
 
-    <table width="100%" border="1">
+    <table>
         <thead>
             <tr>
                 <th>Hari/Jam</th>
@@ -28,54 +75,54 @@
             </tr>
         </thead>
         <tbody>
-            <tr align="center">
-                <td>Senin</td>
+            <tr>
+                <td style="background-color: #a484bc;"><b>Senin</b></td>
                 <td></td>
                 <td></td>
-                <td colspan="2">IMK<br>K.205<br>Kelas D</td>
-                <td colspan="2">Pem Platform<br>LJK.A<br>Kelas E</td>
+                <td colspan="2" style="background-color: #ccccff;">IMK<br>K.205<br>Kelas D</td>
+                <td colspan="2" style="background-color: #ccccff;">Pem Platform<br>LJK.A<br>Kelas E</td>
                 <td></td>
                 <td></td>
-                <td colspan="2">KompParDis<br>LJK.E<br>Kelas E</td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr align="center">
-                <td>Selasa</td>
-                <td></td>
-                <td></td>
-                <td colspan="2">Pemb. Mesin<br>LBD.C<br>Kelas D</td>
-                <td colspan="2">RPL<br>LKD.A FST<br>Kelas E</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td colspan="2" style="background-color: #ccccff;">KompParDis<br>LJK.E<br>Kelas E</td>
                 <td></td>
                 <td></td>
             </tr>
-            <tr align="center">
-                <td>Rabu</td>
+            <tr>
+                <td style="background-color: #a484bc;"><b>Selasa</b></td>
                 <td></td>
-                <td colspan="3">ASA<br>K.205<br>Kelas E</td>
-                <td colspan="2">Etika Profesi<br>K.205<br>Kelas B</td>
                 <td></td>
-                <td colspan="3">RPL<br>LJK.A<br>Kelas EP</td>
+                <td colspan="2" style="background-color: #ccccff;">Pemb. Mesin<br>LBD.C<br>Kelas D</td>
+                <td colspan="2" style="background-color: #ccccff;">RPL<br>LKD.A FST<br>Kelas E</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
-            <tr align="center">
-                <td>Kamis</td>
+            <tr>
+                <td style="background-color: #a484bc;"><b>Rabu</b></td>
+                <td></td>
+                <td colspan="3" style="background-color: #ccccff;">ASA<br>K.205<br>Kelas E</td>
+                <td colspan="2" style="background-color: #ccccff;">Etika Profesi<br>K.205<br>Kelas B</td>
+                <td></td>
+                <td colspan="3" style="background-color: #ccccff;">RPL<br>LJK.A<br>Kelas EP</td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td colspan="3">Pemb. Mesin<br>LBD.C<br>Kelas D</td>
-                <td></td>
-                <td></td>
-                <td colspan="3">Pemb. Mesin<br>LBD.C<br>Kelas DP</td>
             </tr>
-            <tr align="center">
-                <td>Jumat</td>
+            <tr>
+                <td style="background-color: #a484bc;"><b>Kamis</b></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td colspan="3" style="background-color: #ccccff;">Pemb. Mesin<br>LBD.C<br>Kelas D</td>
+                <td></td>
+                <td></td>
+                <td colspan="3" style="background-color: #ccccff;">Pemb. Mesin<br>LBD.C<br>Kelas DP</td>
+            </tr>
+            <tr>
+                <td style="background-color: #a484bc;"><b>Jumat</b></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -84,7 +131,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td colspan="2">Manaj Infor<br>K.311<br>Kelas B</td>
+                <td colspan="2" style="background-color: #ccccff;">Manaj Infor<br>K.311<br>Kelas B</td>
                 <td></td>
                 <td></td>
             </tr>
